# AURA

./: LICENSE  README.md  pyproject.toml
config/: settings.py
models/wakeWord/: Hey-Wobble_en_windows_v3_0_0.ppn
playground/: main.py  test_local_ai.py  test_local_ai2.py  test_tools.py
src/: main.py
src/agent/: agent.py
src/agent/audio/: __init__.py  audioEngine.py
src/agent/engines/: audioEngine.py
tools/: README.md  __init__.py  agentTools.py  applicationTools.py  browsingTools.py  cmdTools.py  toolB.py  toolResponse.py  toolResult.py
