[project]
name = "aura"
version = "0.1.0"
description = "The Beyond Team (consisting of only me 🥲) presentsAURA: The Artificial Understanding & Response Assistant"
authors = [
    {name = "Navid",email = "navidyaghmaei1@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pvporcupine (>=3.0.5,<4.0.0)",
    "pvrecorder (>=1.2.7,<2.0.0)",
    "vosk (>=0.3.45,<0.4.0)",
    "pyaudio (>=0.2.14,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
